2005-11-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* make/mutopia-vars.make:
	* make/ly-vars.make: Use src-wildcard iso wildcard for source
	files.

2005-11-13  Werner Lemberg  <wl@gnu.org>

	* mf/feta-arrow.mf: For all glyphs, don't mirror `currentpicture'
	but the affected path.  This ensures that the (overlapping) outlines
	have the same direction, which is a necessary prerequisite for
	FontForge's algorithm to remove overlaps.
	Formatting.

	* mf/feta-haak.mf: Formatting.
	(draw_bracket): Slightly modify outline to avoid an unnecessary
	corner.
	Don't use ad-hoc values for `leave_angle' and `tip_angle' but derive
	them from the affected paths.

2005-11-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/tie-column-format.cc (set_chord_outline): add dots into
	skyline extents. This fixes tie formatting if the left head has dots.

	* lily/tie.cc (get_configuration): only shift tie by a whole staff
	space inside the staff.
	(get_configuration): shift another position if necessary in case
	of left head tie  

2005-11-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* stepmake/stepmake/texinfo-vars.make (GENERATE_OMF): use
	buildscript-dir iso. $(depth)/buildscripts.

	* tex/GNUmakefile (local-uninstall): remove
	music-drawing-routines.ps juggling.

	* stepmake/stepmake/install-targets.make (local-install-files):
	prepend src-dir to install targets.

	* lily/system-start-delimiter-engraver.cc
	(acknowledge_system_start_delimiter): use
	add_offset_callback(). This fixes translation of nested
	staffgroups.

	* lily/grob-closure.cc (add_offset_callback): only encaps in
	simple_closure if it's a procedure.
	
	* lily/span-bar.cc (calc_glyph_name): read glyph-name, not glyph
	from bar-line.

	* ly/engraver-init.ly (RemoveEmptyRhythmicStaffContext): add
	remove-empty where pertinent.

2005-11-12  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/instrument-notation.itely: added
	Cameron Horsburgh's multiple stanzas docs.  Thanks!
